package practica3.ejercicio3;

public interface Calculator {

	public int crcFor(String data);
	
}
