package practica3.ejercicio3;

public class Display {

	public String showBanner(String img) {
		return img;
	}
}
